--- a/LibraryManagementApp/MainWindow.xaml
+++ b/LibraryManagementApp/MainWindow.xaml
@@ -26,7 +26,7 @@
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
             <!-- Section Connexion -->
-            <TextBlock Text="Connexion" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+            <TextBlock Text="Connexion" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0,0,0,20" HorizontalAlignment="Center" FontFamily="{StaticResource RobotoRegular}"/>
 
             <StackPanel Margin="0,0,0,10">
                 <TextBlock Text="Nom d'utilisateur" 
@@ -34,7 +34,8 @@
                            Margin="5,0,0,3" 
                            VerticalAlignment="Center" 
                            FontSize="18" 
-                           FontWeight="Bold"/>
+                           FontWeight="Bold"
+                           FontFamily="{StaticResource RobotoRegular}"/>
 
                 <Border Background="#1A1A1A" BorderBrush="#00BFFF" BorderThickness="2" CornerRadius="5" Margin="0,0,0,10">
                     <Grid>
@@ -65,7 +66,8 @@
                            Margin="5,0,0,3" 
                            VerticalAlignment="Center" 
                            FontSize="18" 
-                           FontWeight="Bold"/>  
+                           FontWeight="Bold"
+                           FontFamily="{StaticResource RobotoRegular}"/>  
                 
                 
                 
@@ -133,6 +135,7 @@
             </StackPanel>
 
             <Button Content="Se connecter"
+                    FontFamily="{StaticResource RobotoRegular}"
                     Style="{StaticResource LoginButtonStyle}" Height="40" 
                     />
 
@@ -141,7 +144,8 @@
                        Foreground="LightGray" 
                        HorizontalAlignment="Center" 
                        Margin="0,20,0,0" 
-                       Cursor="Hand"/>
+                       Cursor="Hand"
+                       FontFamily="{StaticResource RobotoRegular}"/>
         </StackPanel>
 
     </Grid>
