--- a/LibraryManagementApp/MainWindow.xaml
+++ b/LibraryManagementApp/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:LibraryManagementApp"
         xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="Connexion - Gestion de Bibliothèque" Height="600" Width="800" Background="{StaticResource ResourceKey=BackgroundGradient}">
 
     <Window.Resources>
@@ -23,7 +24,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="288">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
 
             <!-- Section Connexion -->
             <TextBlock Text="Connexion" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0,0,0,20" HorizontalAlignment="Center" FontFamily="{StaticResource RobotoRegular}"/>
@@ -33,8 +34,7 @@
                            Foreground="LightGray" 
                            Margin="5,0,0,3" 
                            VerticalAlignment="Center" 
-                           FontSize="18" 
-                           FontWeight="Bold"
+                           FontSize="18"
                            FontFamily="{StaticResource RobotoRegular}"/>
 
                 <Border Background="#1A1A1A" BorderBrush="#00BFFF" BorderThickness="2" CornerRadius="5" Margin="0,0,0,10">
@@ -54,10 +54,11 @@
                                  Foreground="White" 
                                  BorderThickness="0" 
                                  FontSize="16"
-                                 FontFamily="Roboto"
-                                 Margin="25,0,25,0"
+                                 FontFamily="{StaticResource RobotoRegular}"
+                                 Margin="10,0"
                                  CaretBrush="White"
-                                 Padding="5" Grid.ColumnSpan="2"/>
+                                 Padding="5"
+                                 Grid.Column="1"/>
                     </Grid>
                 </Border>
 
@@ -66,7 +67,6 @@
                            Margin="5,0,0,3" 
                            VerticalAlignment="Center" 
                            FontSize="18" 
-                           FontWeight="Bold"
                            FontFamily="{StaticResource RobotoRegular}"/>  
                 
                 
@@ -83,81 +83,59 @@
                         <Icon:PackIconMaterial Kind="Lock" 
                                 Width="24" 
                                 Height="24" 
-                                Margin="5" 
+                                Margin="5"
                                 Foreground="LightGray"/>
 
                         <!-- PasswordBox pour la saisie du mot de passe -->
                         <PasswordBox x:Name="PasswordBox" 
-                              Background="Transparent" 
-                              Foreground="White" 
-                              BorderThickness="0" 
-                              FontSize="16"
-                              FontFamily="Roboto"
-                              Margin="0,0,0,0"
-                              CaretBrush="White"
-                              Padding="0,5,5,5" Grid.Column="1"/>
+                                      Background="Transparent" 
+                                      Foreground="White" 
+                                      BorderThickness="0" 
+                                      FontSize="16"
+                                      FontFamily="{StaticResource RobotoRegular}"
+                                      Margin="5,0"
+                                      CaretBrush="White"
+                                      Padding="5"                                      
+                                      Grid.Column="1"/>
 
                         <!-- TextBox pour afficher le mot de passe en clair -->
                         <TextBox x:Name="PasswordTextBox" 
-                             Background="Transparent" 
-                             Foreground="White"
-                             BorderThickness="0" 
-                             FontSize="16"
-                             FontFamily="Roboto"
-                             Margin="0,0,0,0"
-                             CaretBrush="White"
-                             Padding="0,5,5,5"
-                             Visibility="Collapsed" 
-                             Grid.Column="1"
+                                Background="Transparent" 
+                                Foreground="White"
+                                BorderThickness="0" 
+                                FontSize="16"
+                                FontFamily="{StaticResource RobotoRegular}"
+                                Margin="5,0"
+                                CaretBrush="White"
+                                Padding="5"
+                                Visibility="Collapsed" 
+                                Grid.Column="1"
                         />  
 
                         <!-- ToggleButton pour afficher/masquer le mot de passe -->
                         <ToggleButton x:Name="TogglePasswordVisibility" 
-              Grid.Column="2" 
-              Width="24"
-              Height="24" 
-              Margin="5"
-              Cursor="Hand"        
-              VerticalAlignment="Center" 
-              Background="Transparent"
-              BorderThickness="0"
-              IsChecked="False"
-              Click="TogglePasswordVisibility_Click">
+                                      Grid.Column="2" 
+                                      Width="24"
+                                      Height="24" 
+                                      Margin="5"
+                                      Cursor="Hand"        
+                                      VerticalAlignment="Center" 
+                                      Background="Transparent"
+                                      BorderThickness="0"
+                                      IsChecked="False"
+                                      Click="TogglePasswordVisibility_Click">
                             <ToggleButton.Template>
                                 <ControlTemplate TargetType="ToggleButton">
                                     <Grid>
                                         <Icon:PackIconMaterial x:Name="EyeIcon" 
-                                        Kind="EyeOff" 
-                                        Width="24" 
-                                        Height="24"
-                                        Foreground="LightGray"/>
+                                                                Kind="EyeOff" 
+                                                                Width="24" 
+                                                                Height="24"
+                                                                Foreground="LightGray"/>
                                         <!-- Couleur de l'icône -->
                                     </Grid>
                                 </ControlTemplate>
                             </ToggleButton.Template>
-
-                            <ToggleButton.Style>
-                                <Style TargetType="ToggleButton">
-                                    <Setter Property="Background" Value="Transparent"/>
-                                    <Setter Property="BorderThickness" Value="0"/>
-                                    <Setter Property="Foreground" Value="Transparent"/>
-                                    <!-- Aucun texte visible -->
-                                    <Style.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Background" Value="Transparent"/>
-                                            <!-- Pas de couleur pendant le hover -->
-                                        </Trigger>
-                                        <Trigger Property="IsChecked" Value="True">
-                                            <Setter Property="Background" Value="Transparent"/>
-                                            <!-- Pas de couleur lorsqu'il est activé -->
-                                        </Trigger>
-                                        <Trigger Property="IsFocused" Value="True">
-                                            <Setter Property="Background" Value="Transparent"/>
-                                            <!-- Pas de couleur de focus -->
-                                        </Trigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </ToggleButton.Style>
                         </ToggleButton>
 
                     </Grid>
