--- a/LibraryManagementApp/MainWindow.xaml
+++ b/LibraryManagementApp/MainWindow.xaml
@@ -24,145 +24,172 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+        <Grid x:Name="MainGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-            <!-- Section Connexion -->
-            <TextBlock Text="Connexion" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0,0,0,20" HorizontalAlignment="Center" FontFamily="{StaticResource RobotoRegular}"/>
+            <!-- Vue de connexion -->
+            <StackPanel x:Name="SignInPanel" Visibility="Visible" VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
 
-            <StackPanel Margin="0,0,0,10">
-                <TextBlock Text="Nom d'utilisateur" 
-                           Foreground="LightGray" 
-                           Margin="5,0,0,3" 
-                           VerticalAlignment="Center" 
-                           FontSize="18"
-                           FontFamily="{StaticResource RobotoRegular}"/>
+                <!-- Section Connexion -->
+                <TextBlock Text="Connexion" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0,0,0,20" HorizontalAlignment="Center" FontFamily="{StaticResource RobotoRegular}"/>
 
-                <Border Background="#1A1A1A" BorderBrush="#00BFFF" BorderThickness="2" CornerRadius="5" Margin="0,0,0,10">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                <StackPanel Margin="0,0,0,10">
+                    <TextBlock Text="Nom d'utilisateur" 
+                               Foreground="LightGray" 
+                               Margin="5,0,0,3" 
+                               VerticalAlignment="Center" 
+                               FontSize="18"
+                               FontFamily="{StaticResource RobotoRegular}"/>
 
-                        <Icon:PackIconMaterial Kind="Account" 
-                                                Width="24" 
-                                                Height="24" 
-                                                Margin="5" 
-                                                Foreground="LightGray"/>
-                        <TextBox x:Name="UsernameTextBox" 
-                                 Background="Transparent" 
-                                 Foreground="White" 
-                                 BorderThickness="0" 
-                                 FontSize="16"
-                                 FontFamily="{StaticResource RobotoRegular}"
-                                 Margin="10,0"
-                                 CaretBrush="White"
-                                 Padding="5"
-                                 Grid.Column="1"/>
-                    </Grid>
-                </Border>
+                    <Border Background="#1A1A1A" BorderBrush="#00BFFF" BorderThickness="2" CornerRadius="5" Margin="0,0,0,10">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
 
-                <TextBlock Text="Mot de passe" 
-                           Foreground="LightGray" 
-                           Margin="5,0,0,3" 
-                           VerticalAlignment="Center" 
-                           FontSize="18" 
-                           FontFamily="{StaticResource RobotoRegular}"/>  
-                
-                
-                
-                <Border Background="#1A1A1A" BorderBrush="#00BFFF" BorderThickness="2" CornerRadius="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+                            <Icon:PackIconMaterial Kind="Account" 
+                                                    Width="24" 
+                                                    Height="24" 
+                                                    Margin="5" 
+                                                    Foreground="LightGray"/>
+                            <TextBox x:Name="UsernameTextBox" 
+                                     Background="Transparent" 
+                                     Foreground="White" 
+                                     BorderThickness="0" 
+                                     FontSize="16"
+                                     FontFamily="{StaticResource RobotoRegular}"
+                                     Margin="10,0"
+                                     CaretBrush="White"
+                                     Padding="5"
+                                     Grid.Column="1"/>
+                        </Grid>
+                    </Border>
 
-                        <!-- Icone pour le champ mot de passe -->
-                        <Icon:PackIconMaterial Kind="Lock" 
-                                Width="24" 
-                                Height="24" 
-                                Margin="5"
-                                Foreground="LightGray"/>
+                    <TextBlock Text="Mot de passe" 
+                               Foreground="LightGray" 
+                               Margin="5,0,0,3" 
+                               VerticalAlignment="Center" 
+                               FontSize="18" 
+                               FontFamily="{StaticResource RobotoRegular}"/>
 
-                        <!-- PasswordBox pour la saisie du mot de passe -->
-                        <PasswordBox x:Name="PasswordBox" 
-                                      Background="Transparent" 
-                                      Foreground="White" 
-                                      BorderThickness="0" 
-                                      FontSize="16"
-                                      FontFamily="{StaticResource RobotoRegular}"
-                                      Margin="5,0"
-                                      CaretBrush="White"
-                                      Padding="5"                                      
-                                      Grid.Column="1"/>
 
-                        <!-- TextBox pour afficher le mot de passe en clair -->
-                        <TextBox x:Name="PasswordTextBox" 
-                                Background="Transparent" 
-                                Foreground="White"
-                                BorderThickness="0" 
-                                FontSize="16"
-                                FontFamily="{StaticResource RobotoRegular}"
-                                Margin="5,0"
-                                CaretBrush="White"
-                                Padding="5"
-                                Visibility="Collapsed" 
-                                Grid.Column="1"
-                        />  
 
-                        <!-- ToggleButton pour afficher/masquer le mot de passe -->
-                        <ToggleButton x:Name="TogglePasswordVisibility" 
-                                      Grid.Column="2" 
-                                      Width="24"
-                                      Height="24" 
-                                      Margin="5"
-                                      Cursor="Hand"        
-                                      VerticalAlignment="Center" 
-                                      Background="Transparent"
-                                      BorderThickness="0"
-                                      IsChecked="False"
-                                      Click="TogglePasswordVisibility_Click">
-                            <ToggleButton.Template>
-                                <ControlTemplate TargetType="ToggleButton">
-                                    <Grid>
-                                        <Icon:PackIconMaterial x:Name="EyeIcon" 
-                                                                Kind="EyeOff" 
-                                                                Width="24" 
-                                                                Height="24"
-                                                                Foreground="LightGray"/>
-                                        <!-- Couleur de l'icône -->
-                                    </Grid>
-                                </ControlTemplate>
-                            </ToggleButton.Template>
-                        </ToggleButton>
+                    <Border Background="#1A1A1A" BorderBrush="#00BFFF" BorderThickness="2" CornerRadius="5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
 
-                    </Grid>
-                </Border>
+                            <!-- Icone pour le champ mot de passe -->
+                            <Icon:PackIconMaterial Kind="Lock" 
+                                    Width="24" 
+                                    Height="24" 
+                                    Margin="5"
+                                    Foreground="LightGray"/>
 
+                            <!-- PasswordBox pour la saisie du mot de passe -->
+                            <PasswordBox x:Name="PasswordBox" 
+                                          Background="Transparent" 
+                                          Foreground="White" 
+                                          BorderThickness="0" 
+                                          FontSize="16"
+                                          FontFamily="{StaticResource RobotoRegular}"
+                                          Margin="5,0"
+                                          CaretBrush="White"
+                                          Padding="5"                                      
+                                          Grid.Column="1"/>
+
+                            <!-- TextBox pour afficher le mot de passe en clair -->
+                            <TextBox x:Name="PasswordTextBox" 
+                                    Background="Transparent" 
+                                    Foreground="White"
+                                    BorderThickness="0" 
+                                    FontSize="16"
+                                    FontFamily="{StaticResource RobotoRegular}"
+                                    Margin="5,0"
+                                    CaretBrush="White"
+                                    Padding="5"
+                                    Visibility="Collapsed" 
+                                    Grid.Column="1"
+                            />
+
+                            <!-- ToggleButton pour afficher/masquer le mot de passe -->
+                            <ToggleButton x:Name="TogglePasswordVisibility" 
+                                          Grid.Column="2" 
+                                          Width="24"
+                                          Height="24" 
+                                          Margin="5"
+                                          Cursor="Hand"        
+                                          VerticalAlignment="Center" 
+                                          Background="Transparent"
+                                          BorderThickness="0"
+                                          IsChecked="False"
+                                          Click="TogglePasswordVisibility_Click">
+                                <ToggleButton.Template>
+                                    <ControlTemplate TargetType="ToggleButton">
+                                        <Grid>
+                                            <Icon:PackIconMaterial x:Name="EyeIcon" 
+                                                                    Kind="EyeOff" 
+                                                                    Width="24" 
+                                                                    Height="24"
+                                                                    Foreground="LightGray"/>
+                                            <!-- Couleur de l'icône -->
+                                        </Grid>
+                                    </ControlTemplate>
+                                </ToggleButton.Template>
+                            </ToggleButton>
+
+                        </Grid>
+                    </Border>
+
+                </StackPanel>
+
+                <Button Content="Se connecter"
+                        FontFamily="{StaticResource RobotoRegular}"
+                        Style="{StaticResource LoginButtonStyle}" Height="40" 
+                        />
+
+                <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
+                    <TextBlock Text="Pas encore de compte?" 
+                               FontSize="16" 
+                               Foreground="LightGray" 
+                               HorizontalAlignment="Center" 
+                               Margin="0,0,5,5"
+                               FontFamily="{StaticResource RobotoRegular}"/>
+                    <TextBlock Text="Inscrivez-vous!"
+                               FontSize="16"
+                               Foreground="LightGray"
+                               Cursor="Hand"
+                               MouseDown="SignUp_Click"
+                               FontFamily="{StaticResource RobotoItalic}"/>
+                </StackPanel>
             </StackPanel>
 
-            <Button Content="Se connecter"
-                    FontFamily="{StaticResource RobotoRegular}"
-                    Style="{StaticResource LoginButtonStyle}" Height="40" 
-                    />
 
-            <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
-                <TextBlock Text="Pas encore de compte?" 
-                           FontSize="16" 
-                           Foreground="LightGray" 
-                           HorizontalAlignment="Center" 
-                           Margin="0,0,5,5"
-                           FontFamily="{StaticResource RobotoRegular}"/>
-                <TextBlock Text="Inscrivez-vous!"
-                           FontSize="16"
-                           Foreground="LightGray"
-                           Cursor="Hand"
-                           
-                           FontFamily="{StaticResource RobotoItalic}"/>
+            <!-- Vue d'inscription -->
+            <StackPanel x:Name="SignUpPanel" Visibility="Collapsed">
+                <!-- Contenu d'inscription ici -->
+                <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
+                    <TextBlock Text="Déjà un compte?" 
+                               FontSize="16" 
+                               Foreground="LightGray" 
+                               HorizontalAlignment="Center" 
+                               Margin="0,0,5,5"
+                               FontFamily="{StaticResource RobotoRegular}"/>
+                    <TextBlock Text="Connectez-vous!"
+                               FontSize="16"
+                               Foreground="LightGray"
+                               Cursor="Hand"
+                               MouseDown="SignIn_Click"
+                               FontFamily="{StaticResource RobotoItalic}"/>
+                </StackPanel>
+                <!-- Gestionnaire d'événements pour revenir à la connexion -->
             </StackPanel>
-        </StackPanel>
-
+        </Grid>
     </Grid>
 </Window>
