--- a/LibraryManagementApp/MainWindow.xaml
+++ b/LibraryManagementApp/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="Connexion - Gestion de Bibliothèque"
         Height="600"
         Width="800"
-        Background="{StaticResource ResourceKey=BackgroundGradient}">
+        Background="{StaticResource BackgroundGradient}">
 
     <!-- Resources -->
     <Window.Resources>
@@ -49,7 +49,11 @@
                             <TextBox x:Name="UsernameTextBox" Style="{StaticResource InputTextBoxStyle}" Grid.Column="1"/>
                         </Grid>
                     </Border>
+                    <TextBlock x:Name="UsernameErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
 
+                </StackPanel>
+
+                <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Mot de passe" Style="{StaticResource LabelTextStyle}"/>
                     <Border Style="{StaticResource InputBorderStyle}">
                         <Grid>
@@ -70,9 +74,10 @@
                             </ToggleButton>
                         </Grid>
                     </Border>
+                    <TextBlock x:Name="PasswordErrorTextBlock" Style="{StaticResource ErrorTextStyle}"/>
                 </StackPanel>
 
-                <Button Content="Se connecter" Style="{StaticResource LoginButtonStyle}"/>
+                <Button Content="Se connecter" Style="{StaticResource LoginButtonStyle}" Click="SignInButton_Click"/>
 
                 <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
                     <TextBlock Text="Pas encore de compte?" Style="{StaticResource SecondaryTextStyle}"/>
@@ -96,7 +101,10 @@
                             <TextBox x:Name="SignUpUsernameTextBox" Style="{StaticResource InputTextBoxStyle}" Grid.Column="1"/>
                         </Grid>
                     </Border>
+                    <TextBlock x:Name="SignUpUsernameErrorTextBlock" Style="{StaticResource ErrorTextStyle}"/>
+                </StackPanel>
 
+                <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Mot de passe" Style="{StaticResource LabelTextStyle}"/>
                     <Border Style="{StaticResource InputBorderStyle}">
                         <Grid>
@@ -117,7 +125,10 @@
                             </ToggleButton>
                         </Grid>
                     </Border>
+                    <TextBlock x:Name="SignUpPasswordErrorTextBlock" Style="{StaticResource ErrorTextStyle}"/>
+                </StackPanel>
 
+                <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Confirmer le mot de passe" Style="{StaticResource LabelTextStyle}"/>
                     <Border Style="{StaticResource InputBorderStyle}">
                         <Grid>
@@ -138,6 +149,7 @@
                             </ToggleButton>
                         </Grid>
                     </Border>
+                    <TextBlock x:Name="ConfirmPasswordErrorTextBlock" Style="{StaticResource ErrorTextStyle}"/>
                 </StackPanel>
 
                 <Button Content="S'inscrire" Style="{StaticResource LoginButtonStyle}" Margin="0,10,0,0" Click="SignUpButton_Click"/>
