Revert "Refactor login page"

--- a/LibraryManagementApp/App.xaml
+++ b/LibraryManagementApp/App.xaml
@@ -4,12 +4,46 @@
              xmlns:local="clr-namespace:LibraryManagementApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        
+        <!--Ajout des fonts family-->
+        <FontFamily x:Key="RobotoRegular">./Assets/Fonts/Roboto/Roboto-Regular.ttf#Roboto</FontFamily>
+        <FontFamily x:Key="RobotoBold">./Assets/Fonts/Roboto/Roboto-Bold.ttf#Roboto</FontFamily>
+        <FontFamily x:Key="RobotoItalic">./Assets/Fonts/Roboto/Roboto-Italic.ttf#Roboto</FontFamily>
+        <FontFamily x:Key="RobotoBoldItalic">./Assets/Fonts/Roboto/Roboto-BoldItalic.ttf#Roboto</FontFamily>
+        <FontFamily x:Key="RobotoThin">./Assets/Fonts/Roboto/Roboto-Thin.ttf#Roboto</FontFamily>
 
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+
+        <!--Dégradé pour arrière plan-->
+        <!-- Dégradé circulaire pour arrière-plan -->
+        <RadialGradientBrush x:Key="BackgroundGradient" x:Name="BackgroundGradient" GradientOrigin="0,0" Center="0,0" RadiusX="1" RadiusY="1">
+            <GradientStop Color="#5de0e6" Offset="0" />
+            <GradientStop Color="#004aad" Offset="0.7" />
+        </RadialGradientBrush>
+
+        <!--#3498DB
+        #2C3E50-->
+
+         <!--Storyboard pour animer le dégradé--> 
+        <Storyboard x:Key="GradientAnimation">
+             <!--Animation sur RadiusX--> 
+            <DoubleAnimation Storyboard.TargetName="BackgroundGradient"
+                             Storyboard.TargetProperty="RadiusX"
+                             From="1" To="1.5" Duration="0:0:5" AutoReverse="True" RepeatBehavior="Forever" />
+             <!--Animation sur RadiusY--> 
+            <DoubleAnimation Storyboard.TargetName="BackgroundGradient"
+                             Storyboard.TargetProperty="RadiusY"
+                             From="1" To="1.25" Duration="0:0:5" AutoReverse="True" RepeatBehavior="Forever" />
+        </Storyboard>
+
+         <!--Style global pour appliquer le Background et démarrer l'animation--> 
+        <Style TargetType="Window">
+            <Style.Triggers>
+                <EventTrigger RoutedEvent="Window.Loaded">
+                    <BeginStoryboard Storyboard="{StaticResource GradientAnimation}" />
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>
+
 
     </Application.Resources>
 </Application>
