--- a/LibraryManagementApp/Styles.xaml
+++ b/LibraryManagementApp/Styles.xaml
@@ -1,38 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!--Ajout des polices personnalisées-->
-    <FontFamily x:Key="RobotoRegular">./Assets/Fonts/Roboto/Roboto-Regular.ttf#Roboto</FontFamily>
-    <FontFamily x:Key="RobotoBold">./Assets/Fonts/Roboto/Roboto-Bold.ttf#Roboto</FontFamily>
-    <FontFamily x:Key="RobotoItalic">./Assets/Fonts/Roboto/Roboto-Italic.ttf#Roboto</FontFamily>
-    <FontFamily x:Key="RobotoBoldItalic">./Assets/Fonts/Roboto/Roboto-BoldItalic.ttf#Roboto</FontFamily>
-    <FontFamily x:Key="RobotoThin">./Assets/Fonts/Roboto/Roboto-Thin.ttf#Roboto</FontFamily>
-
-    <!--Dégradé circulaire pour l'arrière-plan-->
-    <RadialGradientBrush x:Key="BackgroundGradient" GradientOrigin="0,0" Center="0,0" RadiusX="1" RadiusY="1">
-        <GradientStop Color="#5DE0E6" Offset="0" />
-        <GradientStop Color="#004AAD" Offset="0.8" />
-    </RadialGradientBrush>
-
-    <!--Style global des messages d'erreur-->
-    <Style x:Key="ErrorTextStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Foreground" Value="Red"/>
-        <Setter Property="Margin" Value="0,5,0,0"/>
-        <Setter Property="Visibility" Value="Collapsed"/>
-    </Style>
-
-    <Style TargetType="Border" x:Key="ErrorBorderStyle">
-        <Setter Property="Background" Value="LightCoral"/>
-        <Setter Property="BorderBrush" Value="Red"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="CornerRadius" Value="5"/>
-        <Setter Property="Padding" Value="5"/>
-        <Setter Property="Margin" Value="0,5,0,0"/>
-        <Setter Property="Visibility" Value="Collapsed"/>
-    </Style>
+    <DropShadowEffect x:Key="NeonEffect" Color="#00FFFF" BlurRadius="4" ShadowDepth="0" Opacity="0.8"/>
 
     <!-- Style for buttons with a 3D effect -->
     <Style x:Key="LoginButtonStyle" TargetType="Button">
@@ -49,11 +18,10 @@
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Padding" Value="15,8"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
+        <Setter Property="FontFamily" Value="Roboto"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Margin" Value="0,10,0,0"/>
         <Setter Property="Opacity" Value="0.9"/>
-        <Setter Property="Height" Value="40"/>
         <Setter Property="Effect">
             <Setter.Value>
                 <DropShadowEffect Color="Gray" BlurRadius="5" ShadowDepth="3"/>
@@ -104,14 +72,13 @@
         </Style.Triggers>
     </Style>
 
-    <!-- TextBox style -->
-    <Style x:Key="InputTextBoxStyle" TargetType="TextBox">
+    <!-- Style for TextBox -->
+    <Style TargetType="TextBox">
         <Setter Property="Padding" Value="10"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily" Value="Roboto"/>
+        <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="White"/>
-        <Setter Property="CaretBrush" Value="White"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
@@ -121,14 +88,13 @@
         </Setter>
     </Style>
 
-    <!-- PasswordBox style -->
-    <Style x:Key="InputPasswordBoxStyle" TargetType="PasswordBox">
+    <!-- Style for PasswordBox -->
+    <Style TargetType="PasswordBox">
         <Setter Property="Padding" Value="10"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily" Value="Roboto"/>
+        <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="White"/>
-        <Setter Property="CaretBrush" Value="White"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="PasswordBox">
@@ -136,63 +102,5 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
-
-    <!-- Additional styles for titles, labels, icons, etc. -->
-    <Style x:Key="TitleTextStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="30"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Foreground" Value="LightGray"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="0,0,0,20"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
-    </Style>
-
-    <Style x:Key="LabelTextStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="18"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="Margin" Value="0,0,0,5"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
-    </Style>
-
-    <Style x:Key="SecondaryTextStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
-    </Style>
-
-    <Style x:Key="LinkTextStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="Foreground" Value="LightBlue"/>
-        <Setter Property="Cursor" Value="Hand"/>
-        <Setter Property="TextDecorations" Value="Underline"/>
-        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
-    </Style>
-
-    <Style x:Key="InputBorderStyle" TargetType="Border">
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="BorderBrush" Value="LightGray"/>
-        <Setter Property="CornerRadius" Value="5"/>
-        <Setter Property="Padding" Value="5"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
-        <Setter Property="Background" Value="#1E1E1E"/>
-    </Style>
-
-    <Style x:Key="IconStyle" TargetType="Icon:PackIconMaterial">
-        <Setter Property="Width" Value="20"/>
-        <Setter Property="Height" Value="20"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="0,0,5,0"/>
-    </Style>
-
-    <Style x:Key="ToggleVisibilityButtonStyle" TargetType="ToggleButton">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Padding" Value="5"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Cursor" Value="Hand"/>
     </Style>
 </ResourceDictionary>
